CSS/about.css
body
{
    background: radial-gradient(#333333, #000000);

    font-family: 'Courier New', Courier, monospace;
    color: yellow;
}

#header
{
    display: flex;
    justify-content: space-between;

    color: #666600;

    user-select: none;

    -webkit-text-stroke: 1px black;
}

#main-text
{
    display: flex;
    justify-content: space-between;

    border-top: 2px solid;
}

p
{
    width: 45%;
    overflow-wrap: break-word;
    font-size: 1.5em;
}

#left
{
    transform: translateX(-110%);
    animation: slide-in-left 0.5s ease paused
}

#right
{
    transform: translateX(110%);
    animation: slide-in-right 0.5s ease paused
}

@keyframes slide-in-left
{
    from
    {
        transform: translateX(-110%);
    }

    to
    {
        transform: translateX(0%);
    }
}

@keyframes slide-in-right
{
    from
    {
        transform: translateX(110%);
    }

    to
    {
        transform: translateX(0%);
    }
}

h1:hover
{
    color: #cccc00;

    cursor: pointer;
}

